[package]
name = "rlox"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.19"

[dependencies]
byteorder = "1"
lalrpop-util = "0.19"
once_cell = "1"
regex = "1"

[dependencies.derive_more]
version = "0.99"
default-features = false
features = ["from"]

[dependencies.gc]
version = "0.4"
features = ["derive"]

[dependencies.structopt]
version = "0.3"
features = ["paw"]

[dependencies.wheel]
git = "https://github.com/fenhl/wheel"
branch = "main"
default-features = false
